--- a/frontend/src/app/components/products/product-read/product-read.component.html
+++ b/frontend/src/app/components/products/product-read/product-read.component.html
@@ -1,3 +1,5 @@
 <ul>
-    <li *ngFor="let product of products">{{ product.name }}</li>
+    <li *ngFor="let product of products">
+        {{ product.id }}=>{{ product.name }}
+    </li>
 </ul>
