--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -17,4 +17,12 @@ body {
     vertical-align: middle;
 }
 
+.msg-success {
+    background-color: #28a745;
+    color: #fff;
+}
 
+.msg-error {
+    background-color: #e35e6b;
+    color: #fff;
+}
