--- a/frontend/src/app/components/products/product-read2/product-read2.component.html
+++ b/frontend/src/app/components/products/product-read2/product-read2.component.html
@@ -1,20 +1,22 @@
-<!-- <div class="mat-elevation-z8">
-  <table mat-table class="full-width-table" matSort aria-label="Elements"> -->
+<div class="mat-elevation-z8">
+  <table mat-table class="full-width-table" matSort aria-label="Elements"
+    [dataSource]="dataSource.data">
+    
     <!-- Id Column -->
-    <!-- <ng-container matColumnDef="id">
+    <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
       <td mat-cell *matCellDef="let row">{{row.id}}</td>
-    </ng-container> -->
+    </ng-container>
 
     <!-- Name Column -->
-    <!-- <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
       <td mat-cell *matCellDef="let row">{{row.name}}</td>
-    </ng-container> -->
-    
+    </ng-container>
+
     <!-- Price Column -->
-    <!-- <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Preço</th>
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
       <td mat-cell *matCellDef="let row">{{row.price}}</td>
     </ng-container>
 
@@ -29,4 +31,4 @@
       [pageSizeOptions]="[5, 10, 20]"
       aria-label="Select page">
   </mat-paginator>
-</div> -->
+</div>
