--- a/frontend/src/app/components/template/header/header.component.css
+++ b/frontend/src/app/components/template/header/header.component.css
@@ -1,23 +1,31 @@
-.header {
+div{
   display: flex;
-  align-items: center;
+}
+
+.header {
+    display: flex;
+    align-items: center;
 }
 
 .header a {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+
 }
 
 .header .logo {
-  max-height: 32px;
-  
+    max-height: 32px;
+    cursor: pointer;
 }
 
 .header .title-group {
-  padding-left: 25px;
+    padding-left: 25px;
+    
 }
 
-.header .title-group i{
-  padding-right: 5px;
+.header .title-group i {
+    padding-right: 5px;
+
 }
